--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     header {
       text-align: center;
       padding: 200px 50px;
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('images/b.jpg');
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('b.jpg');
       background-size: cover;
       background-position: center;
       color: #fff;
