--- a/krish.html
+++ b/krish.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 150px 50px;
-      background-image: url('images/q.jpg'); /* Use your graph image */
+      background-image: url('q.jpg'); /* Use your graph image */
       background-size: cover;
       background-position: center;
       color: #38481d;
@@ -131,7 +131,7 @@
       <!-- Graph Used Image -->
       <h3>Graph Used</h3>
       <div style="text-align: center; margin: 20px 0;">
-        <img src="images/graph.jpg" alt="Graph Used" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 10px;">
+        <img src="graph.jpg" alt="Graph Used" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 10px;">
         <p style="margin-top: 10px; font-style: italic; color: #555;">Graph representation of Gurugram's key locations and connections</p>
       </div>
 
