--- a/project.html
+++ b/project.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 150px 50px;
-      background-image: url('images/MA.jpg');
+      background-image: url('MA.jpg');
       background-size: cover;
       background-position: center;
       color: #0e0d0d;
