--- a/smart_sorting.html
+++ b/smart_sorting.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 150px 50px;
-      background-image: url('images/q.jpg'); /* Use your graph image */
+      background-image: url('q.jpg'); /* Use your graph image */
       background-size: cover;
       background-position: center;
       color: #38481d;
