--- a/sustainability.html
+++ b/sustainability.html
@@ -16,7 +16,7 @@
     header {
       text-align: center;
       padding: 150px 50px;
-      background-image: url('images/MA.jpg');
+      background-image: url('MA.jpg');
       background-size: cover;
       background-position: center;
       color: #2e5e4e;
@@ -145,7 +145,7 @@
 
       <p style="margin-top: 20px;">The data above reflects the current distribution of green spaces and sustainability efforts in the city. Below is a visual representation of the locations:</p>
       <div style="text-align: center; margin: 20px 0;">
-        <img src="images/12.jpg" alt="Location Analysis" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 10px;">
+        <img src="12.jpg" alt="Location Analysis" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 10px;">
         <p style="margin-top: 10px; font-style: italic; color: #555;"></p>
       </div>
 
