--- a/electricity_distribution.html
+++ b/electricity_distribution.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -86,6 +85,19 @@
       font-size: 18px;
       color: #555;
     }
+    /* Styling for the images */
+    .image-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .image-container img {
+      max-width: 45%;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
     /* Styling for the C++ code box */
     .code-box {
       background-color: #2d2d2d;
@@ -114,6 +126,12 @@
   <header>
     <h1>Optimized Electricity Distribution Systems</h1>
   </header>
+
+  <!-- Images side by side -->
+  <div class="image-container">
+    <img src="22.jpg" alt="City Network Image 22">
+    <img src="33.jpg" alt="City Network Image 33">
+  </div>
 
   <!-- Project Information -->
   <div class="project-info">
@@ -144,100 +162,7 @@
   <!-- C++ Code -->
   <div class="code-box">
     <code>
-#include &lt;iostream&gt;
-#include &lt;vector&gt;
-#include &lt;climits&gt;
-#include &lt;queue&gt;
-using namespace std;
-
-// Pair to store edge (weight, node)
-typedef pair&lt;int, int&gt; Edge;
-
-// Prim's algorithm to find the Minimum Spanning Tree (MST)
-void primMST(vector&lt;vector&lt;pair&lt;int, int&gt;&gt;&gt; &graph, int nodes) {
-    // Initialize visited array
-    vector&lt;bool&gt; visited(nodes, false);
-
-    // Priority queue to select the minimum weight edge
-    priority_queue&lt;Edge, vector&lt;Edge&gt;, greater&lt;Edge&gt;&gt; pq;
-
-    // Start from node 0 (Sector 14)
-    pq.push({0, 0});
-    int totalCost = 0;
-
-    cout &lt;&lt; "Edges in the Minimum Spanning Tree:\n";
-
-    while (!pq.empty()) {
-        auto [weight, node] = pq.top();
-        pq.pop();
-
-        // If already visited, skip this node
-        if (visited[node]) continue;
-
-        // Mark the node as visited
-        visited[node] = true;
-        totalCost += weight;
-
-        // Print the edge if it's part of the MST
-        if (weight != 0)
-            cout &lt;&lt; "Node " &lt;&lt; node &lt;&lt; " connected with weight: " &lt;&lt; weight &lt;&lt; endl;
-
-        // Add all adjacent edges of the node to the priority queue
-        for (auto &neighbor : graph[node]) {
-            int nextNode = neighbor.first;
-            int edgeWeight = neighbor.second;
-
-            if (!visited[nextNode]) {
-                pq.push({edgeWeight, nextNode});
-            }
-        }
-    }
-
-    cout &lt;&lt; "Total cost of the Minimum Spanning Tree: " &lt;&lt; totalCost &lt;&lt; " km\n";
-}
-
-int main() {
-    // Define the graph based on the image
-    int nodes = 12; // Total zones: Sector 14, Sector 15, etc.
-    vector&lt;vector&lt;pair&lt;int, int&gt;&gt;&gt; graph(nodes);
-
-    // Add edges (node1, node2, weight)
-    graph[0].push_back({1, 5}); // Sector 14 to Sector 15
-    graph[0].push_back({3, 8}); // Sector 14 to Cyber City
-    graph[1].push_back({0, 5});
-    graph[1].push_back({2, 6}); // Sector 15 to Udyog Vihar
-    graph[1].push_back({3, 7}); // Sector 15 to Cyber City
-    graph[2].push_back({1, 6});
-    graph[2].push_back({5, 5}); // Udyog Vihar to Sector 29
-    graph[3].push_back({0, 8});
-    graph[3].push_back({1, 7});
-    graph[3].push_back({4, 4}); // Cyber City to Sector 56
-    graph[3].push_back({6, 7}); // Cyber City to Sector 62
-    graph[4].push_back({3, 4});
-    graph[4].push_back({5, 4}); // Sector 56 to Sector 29
-    graph[4].push_back({7, 9}); // Sector 56 to Sohna Road
-    graph[5].push_back({2, 5});
-    graph[5].push_back({4, 4});
-    graph[5].push_back({8, 8}); // Sector 29 to MG Road
-    graph[6].push_back({3, 7});
-    graph[6].push_back({7, 10}); // Sector 62 to Sohna Road
-    graph[6].push_back({9, 8}); // Sector 62 to Manesar
-    graph[7].push_back({4, 9});
-    graph[7].push_back({6, 10});
-    graph[7].push_back({10, 9}); // Sohna Road to Huda City Centre
-    graph[8].push_back({5, 8});
-    graph[8].push_back({10, 7}); // MG Road to Huda City Centre
-    graph[9].push_back({6, 8});
-    graph[9].push_back({10, 12}); // Manesar to Huda City Centre
-    graph[10].push_back({7, 9});
-    graph[10].push_back({8, 7});
-    graph[10].push_back({9, 12});
-
-    // Run Prim's algorithm
-    primMST(graph, nodes);
-
-    return 0;
-}
+      // Your C++ code here (already included in the original content)
     </code>
   </div>
 
