--- a/self.html
+++ b/self.html
@@ -105,7 +105,7 @@
   </nav>
 
   <header>
-    <h1>City Cab and Taxi Fare Optimization</h1>
+    <h1>SELF DRIVING CAR </h1>
   </header>
 
   <!-- Project Information -->
