--- a/smart_sorting.html
+++ b/smart_sorting.html
@@ -114,7 +114,7 @@
   <!-- Project Information -->
   <div class="project-info">
     <h2>Project Details</h2>
-    <p><strong>Project Done By:</strong> AMAN YALLIGAR</p>
+    <p><strong>Project Done By:</strong> AMAN YALIGAR</p>
     <p><strong>Roll Number:</strong> 201</p>
     <p><strong>USN:</strong> 01FE23BCI003</p>
   </div>
