--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p>Roll Number: 241<br>USN: 01FE23BCI097</p>
       </div>
       <div class="team-card">
-        <h3>Aman Yalligar</h3>
+        <h3>Aman Yaligar</h3>
         <p>Roll Number: 201<br>USN: 01FE23BCI003</p>
       </div>
     </div>
